testsuite/tests/th/TH_EmptyLamCases.hs
{-# LANGUAGE TemplateHaskell #-}

module TH_EmptyLamCases where

import Language.Haskell.TH

f = $( lamCasesE [] )